syntax = "proto3";

package calcu;
option go_package="calpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumRespone {
    int32 sum_result = 1;
}

message SumManyRequest {
    int32 k = 1;
    int32 N = 2;
}

message SumManyRespone {
    int32 result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumRespone) {}

    rpc SumMany (SumManyRequest) returns (stream SumManyRespone) {}
}